--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
 
                     <div class="h-60 md:h-72 overflow-hidden relative m-3 mb-0">
                         <div class="absolute inset-0 bg-gradient-to-t from-black/70 via-transparent to-transparent z-10"></div>
-                        <img src="https://images.unsplash.com/photo-1600093463592-8e36ae95ef56?auto=format&fit=crop&w=800&q=80" class="w-full h-full object-cover transition duration-700 group-hover:scale-110">
+                        <img src="Gemini_Generated_Image_5dcq3y5dcq3y5dcq.png" class="w-full h-full object-cover transition duration-700 group-hover:scale-110">
                         <div class="absolute bottom-6 left-6 z-20">
                             <span class="px-2 py-0.5 bg-klepon-green/90 text-white text-[10px] font-bold uppercase tracking-widest border border-white/20 mb-2 inline-block">Manis</span>
                             <h3 class="text-2xl md:text-3xl font-serif font-bold text-white mb-1 drop-shadow-md">Klepon Lumer</h3>
