--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Crosantara | Warisan Rasa Nusantara</title>
+    <title>Bista | Warisan Rasa Nusantara</title>
     
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -696,4 +696,5 @@
         });
     </script>
 </body>
+
 </html>
